# starter_template

./: .gitignore  Cargo.toml  README.md  index.html
.github/workflows/: test.yml
app/: Cargo.toml  index.html
app/end2end/tests/: example.spec.ts  shared.ts  tauri.spec.ts  web.spec.ts
app/src/: app.rs  main.rs
app/style/: output.css
end2end/: package-lock.json  package.json
end2end/playwright-report/: index.html
end2end/tests/: example.spec.ts
entity/: Cargo.toml
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: app.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
