[package]
name = "starter_template"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "starter-template-bin"
path = "src/main.rs"

[workspace]
members = ["app", "src-tauri", "migration", "entity"]

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
